<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/verifyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/verify_password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username" />

        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    <EditText
	        android:id="@+id/firstName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	     	android:hint="@string/first_name" 
	     	android:layout_weight="1"/>
	
	    <EditText
	        android:id="@+id/lastName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:hint="@string/last_name"
	        android:layout_weight="1"
	        />	    
    </LinearLayout>

    <EditText
        android:id="@+id/zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/zip_code"
        android:inputType="number"
        android:maxLength="5"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/dlg_background"
            android:contentDescription="@string/add_profile_picture" />

        <Button
            android:id="@+id/addProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/add_profile_picture" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        >
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/register" 
            android:layout_centerInParent="true"
            />       
    </RelativeLayout>

</LinearLayout>