<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

     <Button
         android:id="@+id/test_get"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test_get"
         android:onClick="testAsync" />
     <Button
         android:id="@+id/test_auth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test_auth"
         android:onClick="testAuth" />
     <Button
         android:id="@+id/show_request_generator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/show_request_generator"
         android:onClick="showRequestGeneratorUi" />

     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/show_map"
         android:onClick="showMap" />

</LinearLayout>