<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/oldPassword"
        style="@style/OldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newPassword1"
        style="@style/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password" />

    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleChangePasswordClick"
        android:text="@string/change_password" />

</LinearLayout>