<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_grey_end" >

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_password"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/btn_primary"
        android:onClick="login"
        android:padding="@dimen/padding_12"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/btn_danger"
        android:onClick="cancel"
        android:padding="@dimen/padding_12"
        android:text="@string/cancel"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cancel"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/btn"
        android:onClick="register"
        android:padding="@dimen/padding_12"
        android:text="@string/Register"
        android:textColor="@color/black_end" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/hint_email"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_username"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" >
    </EditText>

</RelativeLayout>